--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -3,10 +3,11 @@
   <head>
     <title>agbcheck</title>
     <script src="popup.js"></script>
+    <script src="sitecache.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <h1>agbcheck</h1>
-    <div id='mainText'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+    <ul id="mainList" type="square"></ul>
   </body>
 </html>
